[metadata]
name = delay_out_center_task
version = attr: delay_out_center_task.__version__
description = State machine and model for a cursor-based center-out, out-center behavioral task, with a delay period after the initial hold.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = 
license = Mozilla Public License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Intended Audience :: Science/Research
    
[options]
packages = delay_out_center_task
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
tests_require =
    pytest

